2003-10-28  Lutz Mueller <lutz@users.sourceforge.net>

	* libjpeg/jpeg-data.c: Do not depend on unistd.h. Reported by
	  Jan Patera <patera@pictview.com>.

2003-10-27  Lutz Mueller <lutz@users.sourceforge.net>

	* libexif: Canon maker notes seem to work now (both loading and
	  saving).

2003-10-27  Lutz Mueller <lutz@users.sourceforge.net>

	* libexif: The code now compiles and loads the canon maker note,
	  but crashes if you query its contents.

2003-10-26  Lutz Mueller <lutz@users.sourceforge.net>

	* test/test-mnote.c: New.
	* libexif: The code now both compiles and doesn't crash,
	  but at least the canon maker note still doesn't get parsed.

2003-10-26  Lutz Mueller <lutz@users.sourceforge.net>

	* configure.in
	* Makefile.am: Remove PO_DIRS. Otherwise, automake complains about
	  po and intl not being in SUBDIRS

2003-10-26  Lutz Mueller <lutz@users.sourceforge.net>

	* libexif/olympus
	* libexif/canon
	* libexif/pentax: Merge libmnote with libexif. The code compiles but
	  is completely untested.

2003-10-15  Lutz Mueller <lutz@users.sourceforge.net>

	* libexif.spec.in: Patches by Peter Bieringer <pb@bieringer.de>.

2003-10-08  Lutz Mueller <lutz@users.sourceforge.net>

	* libexif/exif-data.c: Patch by Jan Patera <patera@pictview.com>.

2003-10-08  Lutz Mueller <lutz@users.sourceforge.net>

	* libexif/exif-entry.c: Patch by Jan Patera <patera@pictview.com>.

2003-09-28  Lutz Mueller <lutz@users.sourceforge.net>

	* Makefile.am
	* configure.in: Patch #813420 by Chris Meyer <cmeyer@mac.com>.

2003-09-05  Lutz Mueller <lutz@users.sourceforge.net>

	* libjpeg/jpeg-data.c: Fix memory leak (discovered by 
	  Ralph Heidelberg <RHeidelberg@Pinnaclesys.com)

2003-08-25  Lutz Mueller <lutz@users.sourceforge.net>

	* libexif/exif-data.c: Fill unneeded bytes with 0. Suggestion by
	  Roberto Costa <roberto.costa@ensta.org>.

2003-08-06  Lutz Mueller <lutz@users.sourceforge.net>

	* libexif/exif-entry.c (exif_entry_initialize): Support some more
	  tags.